# Upholsterer2k

./: .gitignore  CMakeLists.txt  constant_abbreviations.c  constants.c  constants.h  constants_helpers.c  error.c  error.h  hashmap.c  hashmap.h  lexer.c  lexer.h  main.c  opcode_specification.c  opcode_specification.h  opcodes.c  opcodes.h  parser.c  parser.h  source_file.h  string_view.c  string_view.h  string_view_utils.c  string_view_utils.h  test.bsm  test03.bsm  test2.bsm  token.c  token.h  token_vector.c  token_vector.h  types.h  vector.h
.github/workflows/: cmake.yml
tools/: json2constants.py  opcodes2c.py
